[LM05] implement breakdown of nostrcom in lorec-cli

--- a/.conf
+++ b/.conf
@@ -1,7 +1,15 @@
+PATH_TO_PROJECT=$HOME/log-recommender
+PATH_TO_PYTHON_PROJECT=${PATH_TO_PROJECT}/log_recommender
+PATH_TO_PARAMS=${PATH_TO_PYTHON_PROJECT}/nn/
+
 RAW_DATASETS_BASE_DIR=$HOME/raw_datasets/devanbu
 RAW_DATASETS_DIR=$RAW_DATASETS_BASE_DIR/data
 RAW_DATASETS_METADATA_DIR=$RAW_DATASETS_BASE_DIR/metadata
 
 PARSED_DATASETS_DIR=$HOME/log-recommender/nn-data/new_framework
 
-PREPROCESSING_TYPES=(spl numspl scspl nonewlinestabs nocomstr)
+PREPROCESSING_TYPES=(spl numspl scspl nonewlinestabs nocom nostr)
+
+TRASH_DIR="$HOME/.trash"
+
+AUTOGEN_TPL="# This is automatically generated file! Do not edit!"
