[ML08] rename log_recommender package in cli config

--- a/.conf
+++ b/.conf
@@ -1,5 +1,5 @@
 PATH_TO_PROJECT=$HOME/log-recommender
-PATH_TO_PYTHON_PROJECT=${PATH_TO_PROJECT}/log_recommender
+PATH_TO_PYTHON_PROJECT=${PATH_TO_PROJECT}/logrec
 PATH_TO_PARAMS=${PATH_TO_PYTHON_PROJECT}/nn/
 
 RAW_DATASETS_BASE_DIR=$HOME/raw_datasets/devanbu
