add rm, purge, parse, preproces and a draft of vocab commands

--- a/.conf
+++ b/.conf
@@ -9,6 +9,7 @@ RAW_DATASETS_METADATA_DIR=$RAW_DATASETS_BASE_DIR/metadata
 PARSED_DATASETS_DIR=$HOME/log-recommender/nn-data/new_framework
 
 PREPROCESSING_TYPES=(spl numspl scspl nonewlinestabs nocom nostr)
+DEFAULT_PREPROCESSING_TYPE_VALUES=(1 1 0 1 0 0)
 
 TRASH_DIR="$HOME/.trash"
 
