--- a/.conf
+++ b/.conf
@@ -8,8 +8,8 @@ RAW_DATASETS_METADATA_DIR=$RAW_DATASETS_BASE_DIR/metadata
 
 PARSED_DATASETS_DIR=$HOME/log-recommender/nn-data/new_framework
 
-PREPROCESSING_TYPES=(spl numspl scspl nonewlinestabs nocom nostr)
-DEFAULT_PREPROCESSING_TYPE_VALUES=(1 1 0 1 0 0)
+PREPROCESSING_TYPES=(spl numspl scspl nonewlinestabs nocom nostr en_only)
+DEFAULT_PREPROCESSING_TYPE_VALUES=(1 1 0 1 0 0 1)
 
 TRASH_DIR="$HOME/.trash"
 
