--- a/.conf
+++ b/.conf
@@ -1,6 +1,6 @@
 PATH_TO_PROJECT=$HOME/log-recommender
 PATH_TO_PYTHON_PROJECT=${PATH_TO_PROJECT}/logrec
-PATH_TO_PARAMS=${PATH_TO_PYTHON_PROJECT}/nn/
+PATH_TO_LANG_MODEL_PARAMS=${PATH_TO_PYTHON_PROJECT}/langmodel/
 
 RAW_DATASETS_BASE_DIR=$HOME/raw_datasets/devanbu
 RAW_DATASETS_DIR=$RAW_DATASETS_BASE_DIR/data
