(#2) hardcoded python path

--- a/.conf
+++ b/.conf
@@ -15,3 +15,5 @@ DEFAULT_PREPROCESSING_TYPE_VALUES=(1 1 0 1 0 0 1)
 TRASH_DIR="$HOME/.trash"
 
 AUTOGEN_TPL="# This is automatically generated file! Do not edit!"
+
+PYTHON=/home/lv71161/hlibbabii/anaconda3/envs/fastai/bin/python
