--- a/vocab/build
+++ b/vocab/build
@@ -17,11 +17,11 @@ REPR_NAME="$2"
 
 checkVarInConf PARSED_DATASETS_DIR
 checkVarInConf PATH_TO_PROJECT
+checkVarInConf PYTHON
 
 cd ${PATH_TO_PROJECT}
-conda activate fastai
 
-CMD="python logrec/dataprep/vocabsize.py --base-from ${PARSED_DATASETS_DIR} ${DATASET_NAME} ${REPR_NAME}"
+CMD="${PYTHON} logrec/dataprep/vocabsize.py --base-from ${PARSED_DATASETS_DIR} ${DATASET_NAME} ${REPR_NAME}"
 echo "Running the following command:"
 printGreen "${CMD}"
 ${CMD}
