--- a/.conf
+++ b/.conf
@@ -9,9 +9,9 @@ RAW_DATASETS_METADATA_DIR=$RAW_DATASETS_BASE_DIR/metadata
 
 PARSED_DATASETS_DIR=$HOME/log-recommender/nn-data/new_framework
 
-PREPROCESSING_PARAMS=(enonly nocomstr spl nosep nonewlinestabs nologs)
-MAX_PREPROCESSING_PARAMS_VALUES=(1 2 4 1 1 1)	
-DEFAULT_PREPROCESSING_PARAMS_VALUES=(1 0 4 1 1 0)
+PREPROCESSING_PARAMS=(enonly nocomstr spl nosep nonewlinestabs)
+MAX_PREPROCESSING_PARAMS_VALUES=(1 2 6 1 1)	
+DEFAULT_PREPROCESSING_PARAMS_VALUES=(1 0 4 1 1)
 
 TRASH_DIR="$HOME/.trash"
 
