--- a/.conf
+++ b/.conf
@@ -1,17 +1,30 @@
+LOGREC_VERSION=2
 
-PATH_TO_PROJECT=$HOME/log-recommender
+PATH_TO_PROJECT=$HOME/log-recommender-master
 PATH_TO_PYTHON_PROJECT=${PATH_TO_PROJECT}/logrec
 PATH_TO_LANGMODEL_PARAMS=${PATH_TO_PYTHON_PROJECT}/langmodel/
 
-RAW_DATASETS_BASE_DIR=$HOME/raw_datasets/devanbu
-RAW_DATASETS_DIR=$RAW_DATASETS_BASE_DIR/data
+RAW_DATASETS_BASE_DIR=$HOME/raw_datasets/allamanis
+RAW_DATASETS_DIR=$RAW_DATASETS_BASE_DIR
 RAW_DATASETS_METADATA_DIR=$RAW_DATASETS_BASE_DIR/metadata
 
-PARSED_DATASETS_DIR=$HOME/log-recommender/nn-data/new_framework
+PARSED_DATASETS_DIR="$HOME/prep_datasets/v$LOGREC_VERSION"
 
-PREPROCESSING_PARAMS=(enonly nocomstr spl nosep nonewlinestabs)
-MAX_PREPROCESSING_PARAMS_VALUES=(1 2 6 1 1)	
-DEFAULT_PREPROCESSING_PARAMS_VALUES=(1 0 4 1 1)
+MIN_FREQ_OPTIONS=(2 3 4 5 10 15 20 25 30 35 40 45 50 55 60 65 70 75 80 85 90 95 100 150 200 300 400 500 1000)
+
+###### Below we have preprocessing config related vars and functions
+
+PREPROCESSING_PARAMS=(EN_ONLY COM_STR SPLIT TABS_NEWLINES MARK_LOGS CAPS)
+MAX_PREPROCESSING_PARAMS_VALUES=(2 2 8 1 1 1)	
+DEFAULT_PREPROCESSING_PARAMS_VALUES=(1 0 4 1 1 1)
+
+EN_ONLY_STRING_VALUES=('multilang' 'en_only' 'en_only+en_only_content', 'asci_only')
+COM_STR_STRING_VALUES=('strings+comments' 'strings+NO_comments' 'NO_strings+NO_comments')
+SPLIT_STRING_VALUES=('NO_splitting' 'camel+underscore' 'camel+underscore+numbers' 'camel+underscore+number+heuristic' 'camel+underscore+bpe_5k' 'camel+underscore+bpe_1k' 'camel+underscore+bpe_10k' 'camel+underscore+bpe_20k' 'camel+underscore+bpe_0')
+TABS_NEWLINES_STRING_VALUES=('tabs+newlines' 'NO_tabs+NO_newlines')
+MARK_LOGS_STRING_VALUES=('NO_log_marks' 'log_marks')
+CAPS_STRING_VALUES=('case_preserved' 'lowercased')
+#############################################################
 
 TRASH_DIR="$HOME/.trash"
 
